preliminary camera activity, video capture with timer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">recordings</string>
     <string name="tab_title_record">Record</string>
     <string name="tab_title_recordings">Saved Recordings</string>
+    <string name="name_input_hint">File Name</string>
+    <string name="record_button_text">Record</string>
+    <string name="label_camera_activity">Camera</string>
 </resources>
